[gd_scene format=3 uid="uid://2pdcwdny7ixc"]

[ext_resource type="Script" uid="uid://cgo1j2e2kj1o0" path="res://autoload/Scene/CharacterSelect.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://fpkrk4ru3wb1" path="res://autoload/Scene/BGchracselect.PNG" id="2_62vbx"]

[node name="CharacterSelect" type="Control" unique_id=492882153]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="." unique_id=495015805]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="BGchracselect" type="Sprite2D" parent="." unique_id=1759174632]
position = Vector2(576, 337.5)
scale = Vector2(0.6020833, 0.62129635)
texture = ExtResource("2_62vbx")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=69671107]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -28.5
offset_right = 5.0
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="VBoxContainer" unique_id=2084690022]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "CHOOSE YOUR CHARACTER"
horizontal_alignment = 1

[node name="CharactersContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=1806962458]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Character1" type="VBoxContainer" parent="VBoxContainer/CharactersContainer" unique_id=459500566]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CharacterVisual" type="ColorRect" parent="VBoxContainer/CharactersContainer/Character1" unique_id=593464247]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
color = Color(0.3, 0.6, 1, 1)

[node name="Label" type="Label" parent="VBoxContainer/CharactersContainer/Character1/CharacterVisual" unique_id=510440457]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -13.0
offset_right = 40.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "BLUE"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="VBoxContainer/CharactersContainer/Character1" unique_id=11911137]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Blue Fighter"
horizontal_alignment = 1

[node name="SelectButton1" type="Button" parent="VBoxContainer/CharactersContainer/Character1" unique_id=534141133]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SELECT"

[node name="Character2" type="VBoxContainer" parent="VBoxContainer/CharactersContainer" unique_id=873764911]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CharacterVisual" type="ColorRect" parent="VBoxContainer/CharactersContainer/Character2" unique_id=124729158]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
color = Color(1, 0.3, 0.3, 1)

[node name="Label" type="Label" parent="VBoxContainer/CharactersContainer/Character2/CharacterVisual" unique_id=1898206019]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -13.0
offset_right = 40.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "RED"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="VBoxContainer/CharactersContainer/Character2" unique_id=47393807]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Red Fighter"
horizontal_alignment = 1

[node name="SelectButton2" type="Button" parent="VBoxContainer/CharactersContainer/Character2" unique_id=396648234]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SELECT"

[node name="Character3" type="VBoxContainer" parent="VBoxContainer/CharactersContainer" unique_id=501052486]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CharacterVisual" type="ColorRect" parent="VBoxContainer/CharactersContainer/Character3" unique_id=870694563]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
color = Color(0.3, 1, 0.3, 1)

[node name="Label" type="Label" parent="VBoxContainer/CharactersContainer/Character3/CharacterVisual" unique_id=1375913646]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -13.0
offset_right = 40.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "GREEN"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="VBoxContainer/CharactersContainer/Character3" unique_id=1132762155]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Green Fighter"
horizontal_alignment = 1

[node name="SelectButton3" type="Button" parent="VBoxContainer/CharactersContainer/Character3" unique_id=1857351199]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SELECT"

[node name="YourSelection" type="Label" parent="VBoxContainer" unique_id=131561657]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Your Selection: None"
horizontal_alignment = 1

[node name="OpponentSelection" type="Label" parent="VBoxContainer" unique_id=942780471]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Opponent Selection: None"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer" unique_id=2018086522]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Select your character"
horizontal_alignment = 1

[node name="ReadyButton" type="Button" parent="VBoxContainer" unique_id=1840715650]
visible = false
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "READY"

[node name="BackButton" type="Button" parent="VBoxContainer" unique_id=15610595]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "BACK"

[connection signal="pressed" from="VBoxContainer/CharactersContainer/Character1/SelectButton1" to="." method="_on_character_selected" binds= ["blue"]]
[connection signal="pressed" from="VBoxContainer/CharactersContainer/Character2/SelectButton2" to="." method="_on_character_selected" binds= ["red"]]
[connection signal="pressed" from="VBoxContainer/CharactersContainer/Character3/SelectButton3" to="." method="_on_character_selected" binds= ["green"]]
[connection signal="pressed" from="VBoxContainer/ReadyButton" to="." method="_on_ready_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
